Add api for get ids
