# api/app/controllers/api/v1/industry_ids_controller.rb
@@ -1,0 +1,13 @@
+# frozen_string_literal: true
+
+module Api
+  module V1
+    class IndustryIdsController < ApplicationController
+      def index
+        @industry_ids = Industry.ids
+
+        render 'index.json.jb'
+      end
+    end
+  end
+end
